--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ background: #f5f5f5;
     filter: grayscale(100%);
 }
 .button {
-   background-color: #1a7c46;
+   background-color: #187a44;
    min-height: 10vh;
    display: flex;
    justify-content: center;
