--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ nav{
     
 }
 
+
 .nav-links a {
  font-size: 1.2rem;
 font-family: 'Roboto', sans-serif;
@@ -93,9 +94,13 @@ background: #f5f5f5;
 }
 .container1 img{
     width: 400px;
-   
+    transition: 0.5s ease;
     object-fit: cover;
     filter: grayscale(100%);
+}
+.container1 img:hover{
+    filter: grayscale(0%);
+
 }
 .button {
    background-color: #187a44;
@@ -209,6 +214,10 @@ background: #f5f5f5;
     background: #114b2b;
     color: whitesmoke;
     cursor: pointer;
+    transition: 0.5s ease-in all;
+}
+#contact button:hover{
+    background: #0a351d;
 }
 #footer{
     background: #1a7c46;
@@ -224,4 +233,15 @@ background: #f5f5f5;
     cursor: pointer;
     font-size: 1.5rem;
     padding: 0.3rem 1rem;
+    transition: 1s ease-in-out all;
+}
+#footer a :hover{
+    transform: scale(1.2);
+    color: rgb(204, 204, 204);
+
+}
+.form-wrapper{
+    padding: 2rem;
+    border-radius: 1.5rem;
+    background-color: rgba(141, 141, 141, 0.164);
 }
